include/ovstage/ovstage_population_export.h


typedef enum
{
    OVSTAGE_POPULATION_EXPORT_SELECTION_EXPLICIT_PREDICATE = 0,
    OVSTAGE_POPULATION_EXPORT_SELECTION_CHANGED_PROPERTIES_SINCE_ORDINAL = 1,
} ovstage_population_export_selection_t;
typedef enum
{
    OVSTAGE_POPULATION_EXPORT_LAYER_MODE_OVER = 0,
    OVSTAGE_POPULATION_EXPORT_LAYER_MODE_DEF = 1,
} ovstage_population_export_layer_mode_t;
typedef enum
{
    OVSTAGE_POPULATION_EXPORT_PATH_MATCH_EXACT = 0,
    OVSTAGE_POPULATION_EXPORT_PATH_MATCH_PREFIX = 1,
} ovstage_population_export_path_match_t;
typedef enum
{
    OVSTAGE_POPULATION_EXPORT_NAME_MATCH_EXACT = 0,
    OVSTAGE_POPULATION_EXPORT_NAME_MATCH_GLOB = 1,
} ovstage_population_export_name_match_t;
typedef enum
{
    OVSTAGE_POPULATION_EXPORT_TRANSFORM_USD_XFORM_OP = 0,
    OVSTAGE_POPULATION_EXPORT_TRANSFORM_NONE = 1,
    OVSTAGE_POPULATION_EXPORT_TRANSFORM_USD_MATRIX_OP = 2,
} ovstage_population_export_transform_policy_t;
typedef enum
{
    OVSTAGE_POPULATION_EXPORT_UNKNOWN_METADATA_DROP = 0,
    OVSTAGE_POPULATION_EXPORT_UNKNOWN_METADATA_PRESERVE = 1,
    OVSTAGE_POPULATION_EXPORT_UNKNOWN_METADATA_FAIL = 2,
} ovstage_population_export_unknown_metadata_policy_t;
typedef enum
{
    OVSTAGE_POPULATION_EXPORT_SOURCE_API_SCHEMAS_EXPLICIT_ONLY = 0,
    OVSTAGE_POPULATION_EXPORT_SOURCE_API_SCHEMAS_APPLY_RECORDED = 1,
} ovstage_population_export_source_api_schema_policy_t;
typedef enum
{
    OVSTAGE_POPULATION_EXPORT_PROJECTION_EXPLICIT_RULES = 0,
    OVSTAGE_POPULATION_EXPORT_PROJECTION_SCHEMA_DECLARED = 1,
} ovstage_population_export_projection_t;
typedef enum
{
    OVSTAGE_POPULATION_EXPORT_RULE_NONE = 0,
    OVSTAGE_POPULATION_EXPORT_RULE_EXPORT_DEFAULT_VALUE = 1u << 0,
    OVSTAGE_POPULATION_EXPORT_RULE_DERIVED_ALLOWED = 1u << 1,
    OVSTAGE_POPULATION_EXPORT_RULE_INFER_CUSTOM_TYPE = 1u << 3,
    OVSTAGE_POPULATION_EXPORT_RULE_REQUIRED = 1u << 4,
} ovstage_population_export_rule_flags_t;
typedef enum
{
    OVSTAGE_POPULATION_EXPORT_PROPERTY_INVALID = 0,
    OVSTAGE_POPULATION_EXPORT_PROPERTY_RELATIONSHIP = 1,
    OVSTAGE_POPULATION_EXPORT_PROPERTY_CONNECTION = 2,
    OVSTAGE_POPULATION_EXPORT_PROPERTY_MATERIAL_BINDING = 3,
} ovstage_population_export_property_kind_t;
typedef enum
{
    OVSTAGE_POPULATION_EXPORT_METADATA_PRIM = 0,
    OVSTAGE_POPULATION_EXPORT_METADATA_LAYER_CUSTOM_DATA = 1,
    OVSTAGE_POPULATION_EXPORT_METADATA_REFERENCES = 2,
    OVSTAGE_POPULATION_EXPORT_METADATA_LAYER_STANDARD = 3,
} ovstage_population_export_metadata_kind_t;
typedef enum
{
    OVSTAGE_POPULATION_EXPORT_DESTINATION_EMPTY = 0,
    OVSTAGE_POPULATION_EXPORT_DESTINATION_OPEN_EXISTING = 1,
} ovstage_population_export_destination_mode_t;
typedef uint64_t ovstage_population_export_destination_handle_t;
#define OVSTAGE_POPULATION_EXPORT_INVALID_DESTINATION_HANDLE ((ovstage_population_export_destination_handle_t)0)
typedef struct
{
    ovx_string_t path;
    ovstage_population_export_path_match_t path_match;
    ovx_string_t source_attribute_name;
    ovstage_population_export_name_match_t source_attribute_name_match;
    ovx_string_t destination_attribute_name;
    ovx_string_t usd_type_name;
    ovx_string_t required_schema_name;
    uint32_t flags;
} ovstage_population_export_attribute_rule_t;
typedef struct
{
    ovx_string_t path;
    ovstage_population_export_path_match_t path_match;
    ovx_string_t usd_type_name;
    ovx_string_t unknown_type_metadata_key;
} ovstage_population_export_prim_rule_t;
typedef struct
{
    ovx_string_t path;
    ovstage_population_export_path_match_t path_match;
    ovx_string_t schema_name;
    ovx_string_t instance_name;
    uint32_t flags;
} ovstage_population_export_api_schema_rule_t;
typedef struct
{
    ovx_string_t path;
    ovstage_population_export_path_match_t path_match;
    ovx_string_t source_property_name;
    ovx_string_t destination_property_name;
    ovx_string_t usd_type_name;
    ovstage_population_export_property_kind_t property_kind;
    uint32_t flags;
} ovstage_population_export_property_edge_rule_t;
typedef struct
{
    ovx_string_t path;
    ovstage_population_export_path_match_t path_match;
    ovx_string_t source_metadata_name;
    ovx_string_t destination_metadata_name;
    ovstage_population_export_metadata_kind_t metadata_kind;
    uint32_t flags;
} ovstage_population_export_metadata_rule_t;
typedef struct
{
    uint32_t struct_size;
    ovstage_population_export_source_api_schema_policy_t source_api_schema_policy;
    ovstage_population_export_projection_t projection;
    ovstage_ordinal_t ordinal;
    ovstage_ordinal_t since_ordinal;
    ovstage_population_export_selection_t selection;
    ovstage_population_export_layer_mode_t layer_mode;
    ovstage_population_export_transform_policy_t transform_policy;
    ovstage_population_export_unknown_metadata_policy_t unknown_metadata_policy;
    ovstage_population_prim_predicate_t prim_predicate;
    ovstage_population_property_predicate_t property_predicate;
    const ovstage_population_export_prim_rule_t* prim_rules;
    size_t prim_rule_count;
    const ovstage_population_export_api_schema_rule_t* api_schema_rules;
    size_t api_schema_rule_count;
    const ovstage_population_export_attribute_rule_t* attribute_rules;
    size_t attribute_rule_count;
    const ovstage_population_export_property_edge_rule_t* property_rules;
    size_t property_rule_count;
    const ovstage_population_export_metadata_rule_t* metadata_rules;
    size_t metadata_rule_count;
} ovstage_population_export_desc_t;
typedef struct
{
    size_t prims_examined;
    size_t prims_exported;
    size_t prims_skipped;
    size_t attributes_examined;
    size_t attributes_exported;
    size_t attributes_skipped;
    size_t attributes_unsupported;
    size_t api_schemas_examined;
    size_t api_schemas_applied;
    size_t api_schemas_skipped;
    size_t custom_attributes_inferred;
    size_t unknown_metadata_preserved;
    size_t transforms_examined;
    size_t transforms_exported;
    size_t property_edges_examined;
    size_t property_edges_exported;
    size_t property_edges_skipped;
    size_t property_edges_unsupported;
    size_t metadata_examined;
    size_t metadata_exported;
    size_t metadata_skipped;
    size_t metadata_unsupported;
    size_t source_states_unavailable;
} ovstage_population_export_report_t;
ovstage_api_status_t ovstage_population_export_desc_init(
    ovstage_population_export_desc_t* desc);
ovstage_api_status_t ovstage_population_export_desc_init_snapshot(
    ovstage_population_export_desc_t* desc,
    ovstage_ordinal_t ordinal);
ovstage_api_status_t ovstage_population_export_destination_create(
    ovstage_instance_t* stage,
    ovx_string_t usd_identifier,
    ovstage_population_export_destination_mode_t mode,
    ovstage_population_export_destination_handle_t* out_destination);
ovstage_api_status_t ovstage_population_export_to_destination(ovstage_instance_t* stage,
                                                              ovstage_population_export_destination_handle_t destination,
                                                              const ovstage_population_export_desc_t* desc,
                                                              ovstage_population_export_report_t* report);
ovstage_api_status_t ovstage_population_export_destination_save(ovstage_instance_t* stage,
                                                                ovstage_population_export_destination_handle_t destination);
ovstage_api_status_t ovstage_population_export_destination_destroy(
    ovstage_instance_t* stage, ovstage_population_export_destination_handle_t destination);
ovstage_api_status_t ovstage_population_export_to_usd_file(ovstage_instance_t* stage,
                                                           ovx_string_t usd_identifier,
                                                           const ovstage_population_export_desc_t* desc,
                                                           ovstage_population_export_report_t* report);